Refactored InventoryItem repository from entity queries to aggregate ones.